--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,12 @@
 [submodule "Plugin/CakePHP-Google-API-Plugin"]
 	path = Plugin/CakePHP-Google-API-Plugin
 	url = https://github.com/LubosRemplik/CakePHP-Google-API-Plugin.git
+[submodule "Plugin/Google"]
+	path = Plugin/Google
+	url = https://github.com/LubosRemplik/CakePHP-Google-API-Plugin.git
+[submodule "Plugin/CDCUtils"]
+	path = Plugin/CDCUtils
+	url = https://github.com/CakeDC/utils.git
+[submodule "Plugin/utils"]
+	path = Plugin/utils
+	url = https://github.com/CakeDC/utils.git
